--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333; /*color texto*/
     text-align: center; /*alineacion texto*/
-    font-family: Arial; /*tipografia texto*/
+    font-family: Courier; /*tipografia texto*/
     font-size: 16px; /*tamaño de texto en pixeles*/
     margin: 0; /**/
     padding: 0;
