--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333; /*color texto*/
     text-align: center; /*alineacion texto*/
-    font-family: Courier; /*tipografia texto*/
+    font-family: Arial; /*tipografia texto*/
     font-size: 16px; /*tamaño de texto en pixeles*/
     margin: 0; /**/
     padding: 0;
@@ -31,8 +31,11 @@ body
     border: 1px solid #DDD; /*caracteristicas borde*/
     margin: 0 auto;/*margen y auto para que se centre*/
 }
-
 #container h1
 {
     font-size: 20px; /*tamaño del titulo*/
+}
+#post
+{
+    padding: 1em;
 }
